Fix SonarQube issues: simplify return, remove unused import, replace ImmutableList