@@ -37,7 +37,6 @@ import javax.ws.rs.core.Response;
 import org.assertj.core.api.AbstractCharSequenceAssert;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -84,7 +83,8 @@ class JaxRsControllerProxyLinkBuilderTest {
 
     @GET
     @Path("/test")
-    public Response withRequiredFooAndOptionalBarStringQueryParams(@QueryParam("foo") String foo, @QueryParam("bar") @DefaultValue("defaultBar") String bar) {
+    public Response withRequiredFooAndOptionalBarStringQueryParams(@QueryParam("foo") String foo,
+        @QueryParam("bar") @DefaultValue("defaultBar") String bar) {
       return Response.ok(foo + bar).build();
     }
 
@@ -219,7 +219,8 @@ class JaxRsControllerProxyLinkBuilderTest {
   @Test
   void template_does_not_expand_if_only_additional_param_is_resolved() {
 
-    JaxRsLinkBuilder<JaxRsComponent> linkBuilder = new JaxRsControllerProxyLinkBuilder<JaxRsComponent>("", JaxRsComponent.class)
+    JaxRsLinkBuilder<JaxRsComponent> linkBuilder = new JaxRsControllerProxyLinkBuilder<JaxRsComponent>("",
+        JaxRsComponent.class)
         .withAdditionalQueryParameters(ImmutableMap.of("finger", "print"));
 
     Link link = linkBuilder.buildLinkTo(r -> r.withRequiredFooAndOptionalBarStringQueryParams(null, null));
@@ -294,7 +295,7 @@ class JaxRsControllerProxyLinkBuilderTest {
   @Test
   void one_populated_list_query_param() {
 
-    assertLinkUrlFor(r -> r.withListQueryParam(ImmutableList.of("123", "456")))
+    assertLinkUrlFor(r -> r.withListQueryParam(List.of("123", "456")))
         .isEqualTo("/test?foo=123&foo=456");
   }
 
@@ -315,7 +316,7 @@ class JaxRsControllerProxyLinkBuilderTest {
   @Test
   void one_populated_list_query_param_before_string_param() {
 
-    assertLinkUrlFor(r -> r.withListAndStringQueryParam(ImmutableList.of("123", "456"), "789"))
+    assertLinkUrlFor(r -> r.withListAndStringQueryParam(List.of("123", "456"), "789"))
         .isEqualTo("/test?foo=123&foo=456&bar=789");
   }
 
@@ -358,7 +359,8 @@ class JaxRsControllerProxyLinkBuilderTest {
         .isEqualTo("/test/123?bar=456&withDefault=replacement");
   }
 
-  // --- Java 21 workaround: empty iterable query params are skipped from the template ---
+  // --- Java 21 workaround: empty iterable query params are skipped from the
+  // template ---
 
   @Test
   void empty_list_query_param_with_unresolved_string_param() {
@@ -384,14 +386,14 @@ class JaxRsControllerProxyLinkBuilderTest {
   @Test
   void one_populated_and_one_empty_list_query_param() {
 
-    assertLinkUrlFor(r -> r.withTwoListQueryParams(ImmutableList.of("a", "b"), Collections.emptyList()))
+    assertLinkUrlFor(r -> r.withTwoListQueryParams(List.of("a", "b"), Collections.emptyList()))
         .isEqualTo("/test?foo=a&foo=b");
   }
 
   @Test
   void one_empty_and_one_populated_list_query_param() {
 
-    assertLinkUrlFor(r -> r.withTwoListQueryParams(Collections.emptyList(), ImmutableList.of("x")))
+    assertLinkUrlFor(r -> r.withTwoListQueryParams(Collections.emptyList(), List.of("x")))
         .isEqualTo("/test?bar=x");
   }
 
